--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "neutone_sdk"
-version = "1.5.1"
+version = "1.5.2"
 description = "SDK for wrapping deep learning models for usage in the Neutone plugin"
 readme = "README.md"
 authors = ["Qosmo <contact@qosmo.jp>"]
@@ -12,9 +12,9 @@ packages = [{include = "neutone_sdk"}]
 [tool.poetry.dependencies]
 click = ">=8.1.7,<9.0.0"
 python = ">=3.8,<4.0"
-numpy = "^1.21.6"
-torch = ">=1.11.0,<2.10.0"
-torchaudio = ">=0.11.0,<2.10.0"
+numpy = ">=1.21.6,<2.3.0"
+torch = ">=1.11.0,<3.0.0"
+torchaudio = ">=0.11.0,<3.0.0"
 soundfile = ">=0.12.1"
 jsonschema = "^4.21.0"
 requests = "^2.27.1"
